--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 /*                                           Variables */
-/*                                      Header */
+/*                                            Header */
 body {
   background-color: white;
   padding: 0;
@@ -64,7 +64,7 @@ body {
       width: 15%;
       justify-content: end;
       display: flex;
-      margin-right: 2%;
+      margin-right: 10%;
       transition: all 0.5s ease; }
       body .navbar .car a {
         display: flex;
@@ -87,7 +87,7 @@ body {
             font-size: larger; }
     body .navbar .car.active {
       transition: all 0.5s ease;
-      right: 0; }
+      right: -20px; }
     body .navbar .nav-toggler {
       display: none;
       width: 45px;
@@ -100,8 +100,6 @@ body {
       align-items: center;
       justify-content: center;
       transition: all 0.5s ease; }
-      body .navbar .nav-toggler:hover {
-        background-color: #fc54a3; }
       body .navbar .nav-toggler span {
         height: 2px;
         width: 30px;
@@ -193,9 +191,39 @@ body {
     transition: all 0.5s ease; } }
 /*                                          Optimizacion-Telefono */
 /*                                          HEADER */
-body .header .img img {
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center; }
+body .header {
+  overflow: hidden;
+  padding-top: 4%; }
+  body .header .img {
+    display: flex; }
+    body .header .img .img1 {
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: center;
+      width: 100%;
+      height: -webkit-fill-available; }
+
+/*                                          Optimizacion1 */
+@media (max-width: 900px) {
+  body .header {
+    display: flex;
+    justify-content: center; }
+    body .header .img {
+      width: 100%; }
+      body .header .img .img1 {
+        display: none; }
+      body .header .img .imgphone {
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: -webkit-fill-available; } }
+/*                                         optimizacion telefono */
+@media (max-width: 450px) {
+  body .header {
+    padding-top: 20%; }
+    body .header .img {
+      height: 70vh;
+      width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
