--- a/css/style.sass
+++ b/css/style.sass
@@ -2,9 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')
 /*                                           Variables */
 $maincolor:#fc54a3
+$shadow:0 0 15px rgba(0,0 ,0 ,0.25 ) 
+$font: 'Lato', sans-serif
 
-/*                                            Header */    
 
+/* ------------------------------------------------------------------------------------------------- */
+/*                                          NAVBAR */    
 body
     background-color: white
     padding: 0
@@ -12,14 +15,27 @@ body
     /* font-family: 'Roboto', sans-serif */
     font-family: 'Lato', sans-serif
     height: 200vh
+    .navbar.sticky::before
+        transform: translateY(0%)  
     .navbar
         height: 8vh    
-        background-color: black
         display: flex
         justify-content: space-between
         align-items: center
         width: 100%
         position: fixed
+        &::before
+            content: ''
+            position: absolute
+            left: 0
+            top: 0
+            height: 100%
+            width: 100%
+            background-color: $maincolor
+            box-shadow: $shadow
+            z-index: -1
+            transition: transform 0.5s ease
+            transform: translateY(-100%)
         .nav
             width: -webkit-fill-available
             ul
@@ -35,14 +51,13 @@ body
                         font-weight: 300
                         transition:  all 0.5s ease
                         &:hover
-                            color: $maincolor
                             transition: all 0.5s ease
                             letter-spacing: 2px
         .nav.open
             align-items: center
             background-color: black
             justify-content: center
-            top: 9vh
+            top: 7vh
             transition: all 0.5s ease
             ul
                 display: inherit
@@ -91,7 +106,7 @@ body
                         font-size: larger
         .car.active
             transition: all 0.5s ease
-            right: -20px
+            right: -37px
         .nav-toggler
             display: none
             width: 45px
@@ -144,7 +159,7 @@ body
 @media(max-width: 1000px)           
     body
         .navbar
-            height: 10vh    
+            height: 7vh    
             .nav-toggler
                 display: flex
             .logo
@@ -195,21 +210,32 @@ body
             position: absolute
             right: 50px
             transition: all 0.5s ease
-/*                                          Optimizacion-Telefono */          
+/*                                          Optimizacion-Telefono */    
+@media ( max-width: 450px )
+    body
+        .navbar.sticky
+            .nav-toggler.active
+                right: -15px
+                transform: translateY(50px)
+
+/* ------------------------------------------------------------------------------------------------ */
 /*                                          HEADER */
 body
     .header
         overflow: hidden
-        padding-top: 4%
+        height: 100vh
         .img
             display: flex
+            height: 100vh
             .img1
                 background-attachment: fixed
                 background-size: cover
                 background-position: center              
                 width: 100%
                 height: -webkit-fill-available
-/*                                          Optimizacion1 */       
+            .imgphone
+                display: none    
+/*                                          Optimizacion */       
 @media (max-width: 900px)   
     body
         .header
@@ -224,15 +250,159 @@ body
                     background-size: cover
                     background-position: center              
                     width: 100%
-                    height: -webkit-fill-available    
-/*                                         optimizacion telefono */
+                    height: -webkit-fill-available   
+                    display: flex 
+/*                                          Optimizacion telefono */
 @media ( max-width: 450px )
     body
         .header
-            padding-top: 20%
+            height: 70vh
             .img
                 height: 70vh
                 width: 100%
+                .imgphone
+                    display: flex    
+
+
+/* ------------------------------------------------------------------------------------------------- */ 
+/*                                           PIMPUM */
+body
+    .pimpum
+        margin-top: 50px
+        display: flex
+        flex-direction: column
+        align-items: center
+        margin: 0 20px 0 20px
+        overflow: hidden
+        h2
+            text-transform: uppercase
+            font-weight: 900
+            font-size: 13vh
+            text-align: center
+            margin: 20px 0 0 0 
+        p
+            font-weight: 300
+            font-size: 4vh
+            text-transform: uppercase
+            text-align: center
+            letter-spacing: 4px
+            width: 120vh
+        .cont-btn   
+            height: 10vh
+            display: flex
+            align-items: center
+            .btn
+                font-family: 'Lato'
+                text-transform: inherit
+                background-color: black
+                box-shadow: inherit
+                border: cornsilk
+                border-radius: 7vh
+                color: #fc54a3
+                width: 30vh
+                height: 10vh
+                letter-spacing: 4px
+                text-transform: uppercase
+                cursor: pointer
+                transition: all 0.5s ease
+                &:hover
+                    width: 35vh
+                    height: 12vh
+                    letter-spacing: 6px
+                    transition: all 0.5s ease
+        .banners
+                margin-top: 5vh   
+                display: flex
+                width: 100% 
+                justify-content: center
+                .cont-ban
+                    display: flex
+                    margin-top: 30px
+                    display: flex
+                    margin-right: 30px
+                    .bann
+                        display: flex
+                        width: 7vh
+                        margin-right: 3vh
+                    .text
+                        .text1
+                            font-weight: 400
+                            letter-spacing: inherit
+                            font-size: 15px
+                            text-align: inherit
+                            margin: 0
+                            text-transform: uppercase
+                            width: max-content
+                        .text2
+                            font-size: 13px
+                            text-align: inherit
+                            margin: 0 
+                            text-transform: uppercase   
+                            width: max-content
+                            letter-spacing: 0px
+         
+/*                                          Optimizacion */       
+@media (max-width: 900px)
+    body
+        .pimpum
+            .banners
+                display: flex
+                flex-direction: column
+/*                                          Optimizacion telefono */   
+@media (max-width: 450px)    
+    body
+        .pimpum
+            h2
+                font-size: 6vh
+                margin: inherit
+                margin-top: 30px
+            p
+                width: inherit
+                font-size: 2vh
+                letter-spacing: 1px
+            .cont-btn
+                display: flex
+                align-items: center
+                .btn
+                    width: 20vh
+                    height: 5vh  
+                    &:hover
+                        width: 25vh
+                        height: 8vh
+                        letter-spacing: 6px
+                        transition: all 0.5s ease  
+            .banners
+                margin-top: inherit
+                .cont-ban
+                    display: flex
+                    margin-top: 30px
+                    .bann
+                        display: flex
+                        width: 5vh
+                        margin-right: 3vh
+                    .text
+                        .text1
+                            font-weight: 400
+                            letter-spacing: inherit
+                            font-size: 15px
+                            text-align: inherit
+                            margin: 0
+                            text-transform: uppercase
+                        .text2
+                            font-size: 13px
+                            text-align: inherit
+                            margin: 0 
+                            text-transform: uppercase
+        
+                
+                            
+
+
+     
+
+
+
+
                             
 
 
