--- a/css/style.sass
+++ b/css/style.sass
@@ -214,9 +214,11 @@ body
 @media ( max-width: 450px )
     body
         .navbar.sticky
+            .nav.open
+                padding: 40px
             .nav-toggler.active
                 right: -15px
-                transform: translateY(50px)
+                transform: translateY(60px)
 
 /* ------------------------------------------------------------------------------------------------ */
 /*                                          HEADER */
