--- a/css/style.sass
+++ b/css/style.sass
@@ -216,7 +216,7 @@ body
     body
         .navbar.sticky
             .nav.open
-                padding: 40px
+                padding: 40px 0px 40px 0px
             .nav-toggler.active
                 right: -15px
                 transform: translateY(60px)
