--- a/css/style.sass
+++ b/css/style.sass
@@ -211,7 +211,7 @@ body
             position: absolute
             right: 50px
             transition: all 0.5s ease
-/*                                          Optimizacion-Telefono */    
+/*                                          Optimizacion-Telefono Vertical*/    
 @media ( max-width: 450px )
     body
         .navbar.sticky
@@ -220,6 +220,13 @@ body
             .nav-toggler.active
                 right: -15px
                 transform: translateY(60px)
+/*                                          Optimizacion-Telefono Horizontal*/
+/* @media ( max-width: 450px )    
+    body
+        .navbar
+            top: -55vh     */
+
+
 
 /* ------------------------------------------------------------------------------------------------ */
 /*                                          HEADER */
@@ -267,7 +274,11 @@ body
                     display: flex    
 
 
+
 /* ------------------------------------------------------------------------------------------------- */ 
+
+
+
 /*                                           PIMPUM */
 body
     .pimpum
@@ -275,7 +286,8 @@ body
         display: flex
         flex-direction: column
         align-items: center
-        margin: 0 20px 0 20px
+        margin: 20px
+        margin-bottom: 80px
         overflow: hidden
         h2
             text-transform: uppercase
@@ -399,6 +411,171 @@ body
                             margin: 0 
                             text-transform: uppercase
         
+
+
+/* -------------------------------------------------------------------------------------------------- */    
+/*                                          CLOTHES */        
+body
+    .clothes
+        margin: 20px
+        .products
+            display: flex
+            flex-wrap: wrap
+            justify-content: space-around
+            gap: 1%
+            .product
+                width: 24%
+                min-width: 50vh
+                cursor: pointer 
+                margin-bottom: 30px
+                img 
+                    width: 100%
+                    padding-bottom: 10px
+                    display: block
+                    position: relative
+                    -webkit-transition: all .4s linear
+                    transition: all .4s linear
+                    &:hover
+                        -ms-transform: scale(1.1)
+                        -webkit-transform: scale(1.1)
+                        transform: scale(1.1)
+                .description
+                    display: grid
+                    text-transform: uppercase
+                    row-gap: 6px
+                    .category
+                        font-size: 12px
+                        color: #5f5f5f
+                    a
+                        text-decoration: none
+                        color: black
+                        font-weight: 900
+                        letter-spacing: 0px
+                    .price
+                        font-size: 12px    
+
+/*                                          Optimizacion telefono */
+@media (max-width: 450px)
+    body
+        .clothes
+            .products
+                .product
+                    width: inherit
+                    min-width: inherit
+
+/*                                           GIFT CARD */
+body
+    .gift-card
+        display: flex
+        align-items: center
+        flex-direction: column
+        margin: 20px
+        padding-bottom: 50px
+        .card2
+            width: 100% 
+        .card1
+            display: none           
+        .descr-card
+            left: 9%
+            position: absolute
+            width: 20%
+            text-transform: uppercase
+            height: 48%    
+            h2
+                font-size: 45px
+                font-weight: 300
+            p
+                font-size: 12px
+                font-weight: 400    
+            .cont-btn   
+                height: 10vh
+                align-items: center
+                margin-top: 40px
+                .btn
+                    font-family: 'Lato'
+                    text-transform: inherit
+                    background-color: black
+                    box-shadow: inherit
+                    border: cornsilk
+                    border-radius: 7vh
+                    color: #fc54a3
+                    width: 24vh
+                    height: 6vh
+                    letter-spacing: 4px
+                    text-transform: uppercase
+                    cursor: pointer
+                    transition: all 0.5s ease
+                    &:hover
+                        width: 28vh
+                        height: 8vh
+                        letter-spacing: 6px
+                        transition: all 0.5s ease        
+                        
+/*                                          Optimizacion */
+@media (max-width: 900px)
+    body
+        .gift-card
+            .descr-card
+                h2
+                    font-size: 30px
+                p   
+                    font-size: 10px 
+                .cont-btn
+                    .btn
+                        width: 18vh
+                        height: 4vh
+                        letter-spacing: 3px
+                        font-size: 12px
+                        &:hover
+                            height: 5vh
+                            width: 19vh
+                            font-size: 15px
+                            letter-spacing: 4px
+/*                                          Optimizacion telefono */
+@media (max-width: 450px)
+    body
+        .gift-card
+            margin: 20px
+            flex-direction: column
+            display: flex
+            align-items: center
+            .card2
+                display: none    
+            .card1
+                width: 100%    
+                display: block
+            .descr-card
+                text-transform: uppercase
+                height: 48%
+                text-align: center
+                left: inherit
+                position: inherit
+                width: inherit
+                h2
+                    font-size: 40px
+                p
+                    font-size: 14px    
+                .cont-btn
+                    .btn
+                        width: 20vh
+                        height: 5vh
+                        letter-spacing: 3px
+                        font-size: 16px
+                        &:hover
+                            height: 6vh
+                            width: 23vh
+                            font-size: 18px
+                            letter-spacing: 4px                    
+
+
+  
+
+
+                   
+
+
+
+
                 
                             
 
