--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 /*                                           Variables */
+body {
+  box-sizing: border-box; }
+
 /* ------------------------------------------------------------------------------------------------- */
 /*                                          NAVBAR */
 body {
@@ -427,15 +430,16 @@ body .clothes {
   body .clothes .products .product {
     width: inherit;
     min-width: inherit; } }
+/* --------------------------------------------------------------------------------------------------- */
 /*                                           GIFT CARD */
 body .gift-card {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 20px;
-  padding-bottom: 50px; }
+  margin: 20px; }
   body .gift-card .card2 {
-    width: 100%; }
+    width: 100%;
+    height: 90vh; }
   body .gift-card .card1 {
     display: none; }
   body .gift-card .descr-card {
@@ -445,10 +449,10 @@ body .gift-card {
     text-transform: uppercase;
     height: 48%; }
     body .gift-card .descr-card h2 {
-      font-size: 45px;
+      font-size: 4vw;
       font-weight: 300; }
     body .gift-card .descr-card p {
-      font-size: 12px;
+      font-size: 1.5vh;
       font-weight: 400; }
     body .gift-card .descr-card .cont-btn {
       height: 10vh;
@@ -523,5 +527,101 @@ body .gift-card {
           width: 23vh;
           font-size: 18px;
           letter-spacing: 4px; } }
+/* ---------------------------------------------------------------------------------------------------- */
+/*                                          ART */
+body .art {
+  margin: 20px;
+  display: flex;
+  height: 30%; }
+  body .art .descr-art {
+    display: flex;
+    flex-direction: column;
+    margin: 50px 150px 0px 50px;
+    width: 30%;
+    text-transform: uppercase;
+    justify-content: end;
+    position: absolute;
+    height: 50%; }
+    body .art .descr-art h2 {
+      font-size: 3vw;
+      color: white; }
+    body .art .descr-art p {
+      font-size: 1.5vw;
+      color: white; }
+    body .art .descr-art .cont-btn {
+      height: 10vh;
+      align-items: center;
+      margin-top: 40px; }
+      body .art .descr-art .cont-btn .btn {
+        font-family: "Lato";
+        text-transform: inherit;
+        background-color: black;
+        box-shadow: inherit;
+        border: cornsilk;
+        border-radius: 7vh;
+        color: #fc54a3;
+        width: 30vh;
+        height: 6vh;
+        letter-spacing: 4px;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.5s ease; }
+        body .art .descr-art .cont-btn .btn:hover {
+          width: 28vh;
+          height: 8vh;
+          letter-spacing: 6px;
+          transition: all 0.5s ease; }
+  body .art img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%; }
+
+/*                                          Optimizacion  */
+/*                                          Optimizacion telefono */
+@media (max-width: 450px) {
+  body .art {
+    height: 50vh;
+    width: 90%; }
+    body .art img {
+      height: inherit; }
+    body .art .descr-art {
+      align-items: center;
+      margin: inherit;
+      height: 40%;
+      width: 80%;
+      justify-content: center; }
+      body .art .descr-art h2 {
+        font-size: 43px;
+        color: #fc54a3;
+        width: 85%;
+        text-align: center; }
+      body .art .descr-art p {
+        color: white;
+        width: 85%;
+        font-weight: 300;
+        text-align: center;
+        font-size: 4vw; } }
+/*                                                  Carousel products */
+body .products {
+  margin: 20px;
+  display: flex;
+  justify-content: center; }
+  body .products .glider-contain {
+    align-items: center;
+    justify-content: center;
+    display: flex; }
+    body .products .glider-contain .glider-next {
+      right: -4px;
+      top: inherit;
+      padding: inherit;
+      color: #fc54a3; }
+    body .products .glider-contain .glider-prev {
+      left: -4px;
+      top: inherit;
+      padding: inherit;
+      color: #fc54a3; }
+  body .products .glider {
+    display: flex;
+    width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
