--- a/css/style.sass
+++ b/css/style.sass
@@ -4,6 +4,8 @@
 $maincolor:#fc54a3
 $shadow:0 0 15px rgba(0,0 ,0 ,0.25 ) 
 $font: 'Lato', sans-serif
+body
+    box-sizing: border-box
 
 
 /* ------------------------------------------------------------------------------------------------- */
@@ -463,6 +465,8 @@ body
                     width: inherit
                     min-width: inherit
 
+
+/* --------------------------------------------------------------------------------------------------- */
 /*                                           GIFT CARD */
 body
     .gift-card
@@ -470,9 +474,9 @@ body
         align-items: center
         flex-direction: column
         margin: 20px
-        padding-bottom: 50px
         .card2
             width: 100% 
+            height: 90vh
         .card1
             display: none           
         .descr-card
@@ -482,10 +486,10 @@ body
             text-transform: uppercase
             height: 48%    
             h2
-                font-size: 45px
+                font-size: 4vw
                 font-weight: 300
             p
-                font-size: 12px
+                font-size: 1.5vh
                 font-weight: 400    
             .cont-btn   
                 height: 10vh
@@ -568,10 +572,110 @@ body
                             letter-spacing: 4px                    
 
 
-  
+/* ---------------------------------------------------------------------------------------------------- */
+/*                                          ART */
+body
+    .art
+        margin: 20px
+        display: flex
+        height: 30%
+        .descr-art
+            display: flex
+            flex-direction: column
+            margin: 50px 150px 0px 50px
+            width: 30%
+            text-transform: uppercase
+            justify-content: end
+            position: absolute
+            height: 50%
+            h2
+                font-size: 3vw
+                color: white
+            p
+                font-size: 1.5vw
+                color: white
+            .cont-btn   
+                height: 10vh
+                align-items: center
+                margin-top: 40px
+                .btn
+                    font-family: 'Lato'
+                    text-transform: inherit
+                    background-color: black
+                    box-shadow: inherit
+                    border: cornsilk
+                    border-radius: 7vh
+                    color: #fc54a3
+                    width: 30vh
+                    height: 6vh
+                    letter-spacing: 4px
+                    text-transform: uppercase
+                    cursor: pointer
+                    transition: all 0.5s ease
+                    &:hover
+                        width: 28vh
+                        height: 8vh
+                        letter-spacing: 6px
+                        transition: all 0.5s ease    
+        img
+            width: 100%
+            object-fit: cover
+            height: 100%
 
 
-                   
+/*                                          Optimizacion  */
+/*                                          Optimizacion telefono */
+@media (max-width: 450px)
+    body
+        .art
+            height: 50vh
+            width: 90%
+            img
+                height: inherit
+            .descr-art
+                align-items: center
+                margin: inherit
+                height: 40%
+                width: 80% 
+                justify-content: center
+                h2
+                    font-size: 43px
+                    color: $maincolor
+                    width: 85%
+                    text-align: center
+                p
+                    color: white
+                    width: 85%
+                    font-weight: 300
+                    text-align: center
+                    font-size: 4vw
+/*                                                  Carousel products */
+body
+    .products
+        margin: 20px
+        display: flex
+        justify-content: center
+        .glider-contain
+            align-items: center
+            justify-content: center
+            display: flex
+            .glider-next
+                right: -4px
+                top: inherit
+                padding: inherit
+                color: $maincolor
+            .glider-prev   
+                left: -4px
+                top: inherit
+                padding: inherit
+                color: $maincolor
+        .glider
+            display: flex 
+            width: 100%   
+
+
+                
+
 
 
 
