--- a/css/style.sass
+++ b/css/style.sass
@@ -294,12 +294,12 @@ body
         h2
             text-transform: uppercase
             font-weight: 900
-            font-size: 13vh
+            font-size: 7vw
             text-align: center
             margin: 20px 0 0 0 
         p
             font-weight: 300
-            font-size: 4vh
+            font-size: 2vw
             text-transform: uppercase
             text-align: center
             letter-spacing: 4px
@@ -582,12 +582,11 @@ body
         .descr-art
             display: flex
             flex-direction: column
-            margin: 50px 150px 0px 50px
+            margin: 20px 150px 0px 50px
             width: 30%
             text-transform: uppercase
             justify-content: end
             position: absolute
-            height: 50%
             h2
                 font-size: 3vw
                 color: white
@@ -635,8 +634,7 @@ body
             .descr-art
                 align-items: center
                 margin: inherit
-                height: 40%
-                width: 80% 
+                width: 90% 
                 justify-content: center
                 h2
                     font-size: 43px
@@ -649,6 +647,9 @@ body
                     font-weight: 300
                     text-align: center
                     font-size: 4vw
+
+
+
 /*                                                  Carousel products */
 body
     .products
@@ -673,6 +674,81 @@ body
             display: flex 
             width: 100%   
 
+
+
+/* ------------------------------------------------------------------------------------------------------ */
+/*                                          Footer */
+body
+    .footer
+        .phrase
+            display: flex
+            justify-content: center
+            flex-direction: column
+            align-items: center
+            text-align: center
+            padding-bottom: 80px
+            h2
+                font-size: 6vw
+                text-transform: uppercase
+                margin: 0
+                margin-top: 30px
+            p
+                font-size: 3.5vh
+                text-transform: uppercase
+                letter-spacing: 4px
+        .info
+            background-color: black
+            display: flex
+            justify-content: space-between
+            padding: 30px 0px 10px 0px
+            ul
+                color: white
+                text-transform: uppercase
+                list-style: none
+                margin-bottom: 20px
+                color: $maincolor
+                letter-spacing: 2px
+                li
+                    text-decoration: none
+                    line-height: 2vw
+                    font-size: 0.9vw
+                    padding-top: 10px
+                a
+                    color: white    
+                    text-decoration: none
+        .rights
+            display: flex
+            justify-content: space-between
+            padding: 0px 50px
+            background-color: black
+            color: white            
+            align-items: center
+            text-transform: uppercase
+            font-size: 0.7vw
+
+
+/*                                          Optimizacion  */
+/*                                          Optimizacion telefono */
+@media (max-width: 450px)
+    body
+        .footer
+            .phrase
+                h2
+                    font-size: 10vw
+                p
+                    font-size: 4vw    
+            .info
+                flex-direction: column
+                align-items: center
+                text-align: center
+                ul
+                    padding: 0    
+                    li
+                        font-size: 3vw
+            .rights
+                font-size: 2.5vw
+                flex-direction: column
+                line-height: 20px            
 
                 
 
