--- a/css/style.sass
+++ b/css/style.sass
@@ -579,6 +579,7 @@ body
         margin: 20px
         display: flex
         height: 30%
+        align-items: center
         .descr-art
             display: flex
             flex-direction: column
@@ -636,11 +637,13 @@ body
                 margin: inherit
                 width: 90% 
                 justify-content: center
+                align-self: center
                 h2
                     font-size: 43px
                     color: $maincolor
                     width: 85%
                     text-align: center
+                    margin: 0
                 p
                     color: white
                     width: 85%
@@ -656,6 +659,7 @@ body
         margin: 20px
         display: flex
         justify-content: center
+        margin-top: 50px
         .glider-contain
             align-items: center
             justify-content: center
@@ -687,6 +691,7 @@ body
             align-items: center
             text-align: center
             padding-bottom: 80px
+            margin: 0px 20px
             h2
                 font-size: 6vw
                 text-transform: uppercase
@@ -725,6 +730,7 @@ body
             align-items: center
             text-transform: uppercase
             font-size: 0.7vw
+            
 
 
 /*                                          Optimizacion  */
@@ -748,7 +754,8 @@ body
             .rights
                 font-size: 2.5vw
                 flex-direction: column
-                line-height: 20px            
+                line-height: 20px    
+                padding: 0px 20px        
 
                 
 
