--- a/css/style.sass
+++ b/css/style.sass
@@ -759,7 +759,29 @@ body
 
                 
 
-
+/*                                                                                          Top btn */
+body
+    .top-btn
+        display: none
+        position: fixed
+        bottom: 0px
+        right: 5px
+        font-size: 26px
+        width: 50px
+        height: 50px
+        color: $maincolor
+        cursor: pointer
+        outline: none
+        transition-duration: 0.2s
+        transition-timing-function: ease-in-out
+        transition-property: background-color, color
+        background-color: transparent
+        border-color: transparent
+        z-index: 1
+    .top-btn:hover
+        color: #fff
+    .top-btn:focus
+        color: #fff    
 
 
 
