--- a/css/style.css
+++ b/css/style.css
@@ -695,5 +695,27 @@ body .footer .rights {
     flex-direction: column;
     line-height: 20px;
     padding: 0px 20px; } }
+/*                                                                                          Top btn */
+body .top-btn {
+  display: none;
+  position: fixed;
+  bottom: 0px;
+  right: 5px;
+  font-size: 26px;
+  width: 50px;
+  height: 50px;
+  color: #fc54a3;
+  cursor: pointer;
+  outline: none;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  transition-property: background-color, color;
+  background-color: transparent;
+  border-color: transparent;
+  z-index: 1; }
+body .top-btn:hover {
+  color: #fff; }
+body .top-btn:focus {
+  color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
